--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <img src="images/milah_sharp.jpg" alt="Milah squinting at camera." style="max-width:300px">
   <h1>Milah Moore</h1>
   <em>Support animal, rodent exterminator and part-time heat bag.</em>
-  <p>Milah has received many awards for her work as a support animal and professional lap warmer, she is currently on leave from her position as dean of the <a href=" https://www.unisa.edu.au/">Thorngate Academy</a>.
+  <p>Milah has received many awards for her work as a support animal and professional lap warmer, she is currently on leave from her position as dean of the <a href=" https://en.wikipedia.org/wiki/Belair,_South_Australia">Thorngate Academy</a>.
     In her free time she enjoys vegan snacks, road-trips and long walks on the beach.
 
     <hr style="height:1px">
@@ -21,10 +21,10 @@
     <li>Tertiary Education</li>
     <ul>
       <li>Bachelor of Rodent Extermination at Thorngate Academy</li>
+      <li>Certificate of Agriculture II at Deniliquin Farm</li>
     </ul>
     <li>Primary Education</li>
     <ul>
-      <li>Certificate of Agriculture II at Deniliquin Farm</li>
       <li>Puppy Preschool at Blackwood Vet</li>
     </ul>
   </ul>
